--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,14 @@ jobs:
         with:
           go-version: "1.25"
 
-      - name: Run tests
-        run: go test ./...
+      - name: Test with coverage
+        run: go test -v -coverprofile=coverage.txt ./...
+
+      - name: Report coverage
+        run: go tool cover -func=coverage.txt
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: emicklei/oauth2server
